[CE-3970] Fix text size on mobile

--- a/src/component/field/Field.scss
+++ b/src/component/field/Field.scss
@@ -31,7 +31,7 @@
 }
 
 .labelPortrait {
-  composes: u-textSize15 from global;
+  composes: u-textSizeMed from global;
 }
 
 .labelLandscape {
