--- a/src/component/submitTicket/SubmitTicketForm.scss
+++ b/src/component/submitTicket/SubmitTicketForm.scss
@@ -9,6 +9,10 @@
   height: auto;
 }
 
+.containerMobile {
+  composes: u-textSizeMed from global;
+}
+
 .hidden {
   composes: u-isHidden from global;
 }
